--- a/Felipe pamonha/index.html
+++ b/Felipe pamonha/index.html
@@ -3,12 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"  crossorigin="anonymous"  />
     <link rel="stylesheet" href="style.css" />
     <title>Meu portfólio</title>
   </head>
   <body>
-    <img src="img/avatar-perfil.png" alt="avatar da Pamonha_" srcset="" />
+     <header class="container text-center">
+    <img src="imagem/logo.jpg" alt="Avatar do Pamonha_" srcset="" />
     <p>Eu sou Pamonha_</p>
   <h1>Eu ensino Programação</h1>
-</body>
-</html>
+   <p>
+    Sou Estudante de Computação e Pedagoga. Estudo pensamento computacional
+     no Ensino Fundamental e Médio. Estudo sobre pensamento
+    computacional usando HTML, CSS e JavaScript. Veja os projetos que já
+    desenvolvi! </p>
+    <p>Mninhas habilidades</p>
+    <div>
+      <p class="badge bg-secundary">HTML</p>
+    <p class="badge bg-secundary">CSS</p>
+    <p class="badge bg-secundary">JavaScript</p>
+    <p class="badge bg-secundary">Scratch</p>
+    </div>
+      <script
+      scr="https://cdn.jsdelivr.net/npm/boostrap@5.3.3/dist/js/boostrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslKleN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </header>
+  </body>
