--- a/pamonha-aula-1-main/pamonha-aula-1-main/Felipe pamonha/index.html
+++ b/pamonha-aula-1-main/pamonha-aula-1-main/Felipe pamonha/index.html
@@ -8,24 +8,22 @@
     <title>Meu portfólio</title>
   </head>
   <body>
-    
      <header class="container text-center">
-    <img src="imagem/logo.jpg" alt="Avatar do Pamonha_" class="rounded-circle" width="150" srcset="" />
-    <p class="lead">Eu sou Pamonha_</p>
+    <img src="imagem/logo.jpg" alt="Avatar do Pamonha_" srcset="" />
+    <p>Eu sou Pamonha_</p>
   <h1>Eu ensino Programação</h1>
    <p>
     Sou Estudante de Computação e Pedagoga. Estudo pensamento computacional
      no Ensino Fundamental e Médio. Estudo sobre pensamento
-    computacional.Veja os projetos que já
+    computacional usando HTML, CSS e JavaScript. Veja os projetos que já
     desenvolvi! </p>
     <p>Mninhas habilidades</p>
     <div>
-      <p class="badge text-bg-secondary">HTML</p>
-    <p class="badge text-bg-secondary">CSS</p>
-    <p class="badge text-bg-secondary">JavaScript</p>
-    <p class="badge text-bg-secondary">Scratch</p>
+      <p class="badge bg-secundary">HTML</p>
+    <p class="badge bg-secundary">CSS</p>
+    <p class="badge bg-secundary">JavaScript</p>
+    <p class="badge bg-secundary">Scratch</p>
     </div>
-    <header></header>
       <script
       scr="https://cdn.jsdelivr.net/npm/boostrap@5.3.3/dist/js/boostrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslKleN7N6jIeHz"
